# tts-project-v596

./: DEVELOPMENT_LOG.md  Phase1_STAGE_PASS.md  Phase2_STAGE_PASS.md  Phase3_STAGE_PASS.md
01-requirements/: SRS.md  TRACEABILITY_MATRIX.md
03-development/: pyproject.toml  requirements.txt
03-development/tests/: test_error_handler.py  test_parameter_controller.py  test_smoke.py  test_synthesizer.py  test_text_processor.py
03-development/tts_project/: __init__.py  audio_exporter.py  audio_merger.py  batch_processor.py  cli.py  error_handler.py  main.py  parameter_controller.py  synthesizer.py  text_processor.py  tts_engine.py  voice_selector.py
docs/: SAD.md  SPEC_TRACKING.md  SRS.md
