[project]
name = "tts-project"
version = "1.0.0"
description = "TTS 簡報配音系統 - 基於 edge-tts 的文字轉語音工具"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "edge-tts>=6.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tts_project*"]
